# gpc-mcp-server

./: client.py  pyproject.toml  requirements.txt  server.py
